--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@xstate/inspect": "^0.4.1",
+    "@xstate/react": "^1.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "spectacle": "^7.0.4",
+    "web-vitals": "^1.0.1",
+    "xstate": "^4.17.0"
   },
   "scripts": {
     "start": "react-scripts start",
